--- a/Backend/src/main/resources/Druid.properties
+++ b/Backend/src/main/resources/Druid.properties
@@ -1,8 +1,8 @@
 driverClassName=com.mysql.cj.jdbc.Driver
-#url=jdbc:mysql://43.136.33.54/courseselection?serverTimezone=GMT%2B8&useSSL=false
-url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
-username=root
-password=123456
+url=jdbc:mysql://43.136.33.54/courseselection?serverTimezone=GMT%2B8&useSSL=false
+#url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
+username=CourseSelection
+password=CourseSelection
 initialSize=5
 maxActive=10
 maxWait=3000
