--- a/Backend/src/main/webapp/WEB-INF/web.xml
+++ b/Backend/src/main/webapp/WEB-INF/web.xml
@@ -7,23 +7,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
+  <welcome-file-list>
+    <welcome-file>login.jsp</welcome-file>
+  </welcome-file-list>
   <display-name>Archetype Created Web Application</display-name>
 
   <listener>
     <listener-class>com.Tools.InitListener</listener-class>
   </listener>
   <!-- 拦截器属性 -->
-  <filter>
-    <filter-name>LoginFilter</filter-name>  <!-- 拦截器名称，建议与类同名 -->
-    <filter-class>com.Tools.LoginFilter</filter-class><!-- 拦截器类 -->
-  </filter>
 
-  <!-- 拦截器映射 -->
-  <filter-mapping>
-    <filter-name>LoginFilter</filter-name>	<!-- 要映射的拦截器名称 -->
-    <url-pattern>/*</url-pattern>	<!-- 拦截器拦截地址 -->
-  </filter-mapping>
+
 </web-app>
 
 
