前端的一些组件编写

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -154,6 +154,7 @@
         "element-plus/es/components/header/style/index",
         "element-plus/es/components/icon/style/css",
         "element-plus/es/components/icon/style/index",
+        "element-plus/es/components/image/style/index",
         "element-plus/es/components/input/style/css",
         "element-plus/es/components/input/style/index",
         "element-plus/es/components/main/style/css",
@@ -183,6 +184,7 @@
         "element-plus/es/components/scrollbar/style/index",
         "element-plus/es/components/select/style/css",
         "element-plus/es/components/select/style/index",
+        "element-plus/es/components/space/style/index",
         "element-plus/es/components/sub-menu/style/css",
         "element-plus/es/components/sub-menu/style/index",
         "element-plus/es/components/switch/style/css",
