--- a/Backend/src/main/resources/Druid.properties
+++ b/Backend/src/main/resources/Druid.properties
@@ -1,8 +1,12 @@
 driverClassName=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://43.136.33.54/courseselection?serverTimezone=GMT%2B8&useSSL=false
-#url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
-username=CourseSelection
-password=CourseSelection
+#url=jdbc:mysql://43.136.33.54/courseselection?serverTimezone=GMT%2B8&useSSL=false
+#username=CourseSelection
+#password=CourseSelection
+
+url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
+username=root
+password=12345678
+
 initialSize=5
 maxActive=10
 maxWait=3000
