--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -136,6 +136,7 @@
         "element-plus/es/components/descriptions-item/style/index",
         "element-plus/es/components/descriptions/style/css",
         "element-plus/es/components/descriptions/style/index",
+        "element-plus/es/components/dialog/style/index",
         "element-plus/es/components/divider/style/css",
         "element-plus/es/components/divider/style/index",
         "element-plus/es/components/drawer/style/css",
@@ -169,6 +170,7 @@
         "element-plus/es/components/option/style/index",
         "element-plus/es/components/pagination/style/css",
         "element-plus/es/components/pagination/style/index",
+        "element-plus/es/components/popconfirm/style/index",
         "element-plus/es/components/popover/style/css",
         "element-plus/es/components/popover/style/index",
         "element-plus/es/components/progress/style/css",
