--- a/Backend/src/main/resources/Druid.properties
+++ b/Backend/src/main/resources/Druid.properties
@@ -5,8 +5,8 @@ driverClassName=com.mysql.cj.jdbc.Driver
 
 url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
 username=root
-password=root
-#password=12345678
+#password=root
+password=12345678
 
 initialSize=5
 maxActive=50
