增加学生管理添加接口；修改班级管理，增加classNumber、code字段

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -186,6 +186,7 @@
         "element-plus/es/components/row/style/index",
         "element-plus/es/components/scrollbar/style/css",
         "element-plus/es/components/scrollbar/style/index",
+        "element-plus/es/components/select-v2/style/index",
         "element-plus/es/components/select/style/css",
         "element-plus/es/components/select/style/index",
         "element-plus/es/components/space/style/index",
