--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -55,6 +55,11 @@
       <artifactId>commons-codec</artifactId>
       <version>1.15</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.1</version>
+    </dependency>
 
 
   </dependencies>
