--- a/Backend/src/main/resources/Druid.properties
+++ b/Backend/src/main/resources/Druid.properties
@@ -1,12 +1,12 @@
 driverClassName=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://43.136.33.54/courseselection?serverTimezone=GMT%2B8&useSSL=false
-username=CourseSelection
-password=CourseSelection
+#url=jdbc:mysql://43.136.33.54/courseselection?serverTimezone=GMT%2B8&useSSL=false
+#username=CourseSelection
+#password=CourseSelection
 
-#url=jdbc:mysql://localhost:3306/courseselection?serverTimezone=GMT%2B8&useSSL=false
-#username=root
-##password=root
-#password=123456
+url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
+username=root
+#password=root
+password=12345678
 
 initialSize=5
 maxActive=50
