--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,7 +28,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "echarts": "^5.1.2",
-    "element-plus": "^2.2.5",
+    "element-plus": "2.2.5",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
