--- a/Backend/src/main/resources/Druid.properties
+++ b/Backend/src/main/resources/Druid.properties
@@ -3,10 +3,9 @@ driverClassName=com.mysql.cj.jdbc.Driver
 #username=CourseSelection
 #password=CourseSelection
 
-url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
+url=jdbc:mysql://localhost:3306/courseselection?serverTimezone=GMT%2B8&useSSL=false
 username=root
-#password=root
-password=12345678
+password=123456
 
 initialSize=5
 maxActive=50
