--- a/Backend/src/main/resources/Druid.properties
+++ b/Backend/src/main/resources/Druid.properties
@@ -3,9 +3,14 @@ driverClassName=com.mysql.cj.jdbc.Driver
 #username=CourseSelection
 #password=CourseSelection
 
+#LiKaifeng
+#url=jdbc:mysql://localhost:3306/courseselection?serverTimezone=GMT%2B8&useSSL=false
+#username=root
+#password=123456
+
+#ZhangChengwei
 url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
 username=root
-#password=root
 password=12345678
 
 initialSize=5
