--- a/Backend/src/main/resources/Druid.properties
+++ b/Backend/src/main/resources/Druid.properties
@@ -11,6 +11,9 @@ driverClassName=com.mysql.cj.jdbc.Driver
 #ZhangChengwei
 url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
 username=root
+#windows
+#password=root
+# macbook
 password=12345678
 
 initialSize=5
