--- a/Backend/src/main/resources/Druid.properties
+++ b/Backend/src/main/resources/Druid.properties
@@ -1,7 +1,7 @@
 driverClassName=com.mysql.cj.jdbc.Driver
-#url=jdbc:mysql://43.136.33.54/courseselection?serverTimezone=GMT%2B8&useSSL=false
-#username=CourseSelection
-#password=CourseSelection
+url=jdbc:mysql://43.136.33.54/courseselection?serverTimezone=GMT%2B8&useSSL=false
+username=CourseSelection
+password=CourseSelection
 
 #LiKaifeng
 #url=jdbc:mysql://localhost:3306/courseselection?serverTimezone=GMT%2B8&useSSL=false
@@ -9,12 +9,12 @@ driverClassName=com.mysql.cj.jdbc.Driver
 #password=123456
 
 #ZhangChengwei
-url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
-username=root
-#windows
-#password=root
-# macbook
-password=12345678
+#url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
+#username=root
+##windows
+##password=root
+## macbook
+#password=12345678
 
 initialSize=5
 maxActive=50
