--- a/Backend/src/main/resources/Druid.properties
+++ b/Backend/src/main/resources/Druid.properties
@@ -4,15 +4,15 @@ driverClassName=com.mysql.cj.jdbc.Driver
 #password=CourseSelection
 
 #LiKaifeng
-url=jdbc:mysql://localhost:3306/courseselection
-username=root
-password=123456
+#url=jdbc:mysql://localhost:3306/courseselection
+#username=root
+#password=123456
 
 #ZhangChengwei
-#url=jdbc:mysql://localhost:3306/courseselectiondb?serverTimezone=GMT%2B8&useSSL=false
-#username=root
-##windows
-##password=root
-## macbook
-#password=12345678
+url=jdbc:mysql://localhost:3306/courseselectiondb
+username=root
+#windows
+#password=root
+# macbook
+password=12345678
 
